--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,12 @@
+body{
+    background-color: rgb(192, 192, 192);
+    font-family: 'Press Start 2P', cursive;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+}
+
 .flex {
     display: flex;
     flex-wrap: wrap;
@@ -6,8 +15,116 @@
 .box {
     border: solid 1px black;
     border-radius: 20px;
+    background-color: white;
     width: 200px;
     text-align: center;
     margin: 2em;
     padding: 1em;
 }
+
+.header {
+    text-align: center;
+}
+
+main {
+    margin: 0 10em;
+}
+
+#submit {
+    padding: 0.5em;
+    border: none;
+    background-color: red;
+}
+
+img{
+    position: relative;
+    top: -82px;
+}
+
+p{
+   position: relative;
+   top: 9rem;
+   font-size: 28px;
+   font-weight: 900;
+   letter-spacing: -2px;
+}
+
+.child-to-body {
+    width: 300px;
+    height: 400px;
+    flex-shrink: 0;
+    
+}
+
+.poke_box{
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
+.pokeball{
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background: #fff;
+    border: 5px solid #000;
+    border-radius: 50%;
+    overflow: hidden;
+    box-shadow: inset -10px 10px 0 10px #ccc;
+    animation: shake 1.25s cubic-bezier(.36,.07,.19,.97) infinite;
+}
+
+@keyframes shake {
+    0% { transform: translate(0, 0) rotate(0); }
+    20% { transform: translate(-10px, 0) rotate(-20deg); }
+    30% { transform: translate(10px, 0) rotate(20deg); }
+    50% { transform: translate(-10px, 0) rotate(-10deg); }
+    60% { transform: translate(10px, 0) rotate(10deg); }
+    100% { transform: translate(0, 0) rotate(0); }
+  }
+
+.pokeball::before,
+.pokeball::after {
+  content:"";
+  position: absolute;
+}
+
+.pokeball::before {
+    background: red;
+    width: 100%;
+    height: 50%;
+  }
+
+.pokeball::after {
+    top: calc(50% - 5px);
+    width: 100%;
+    height: 10px;
+    background: #000;
+  }
+
+  .pokeball__button {
+    position: absolute;
+    top: calc(50% - 15px);
+    left: calc(50% - 15px);
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border: 4px solid #7f8c8d;
+    border-radius: 50%;
+    z-index: 10;
+    box-shadow: 0 0 0 7px black;
+    animation: blink .5s alternate infinite;
+    animation-play-state: paused;
+  }
+
+  .pokeball:hover .pokeball__button{
+      animation-play-state: running;
+  }
+
+  @keyframes blink {
+    from { background: #eee;}
+    to { background: #e74c3c; }
+  }
+
